auth and cors succesfull test